@@ -1,3 +1,8 @@
+1998-05-19  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
+
+	* ideals.cc (idDelLmEquals): added idDelLmEqual == simplify(16),
+	and idDelDiv == simplify(32); improved pComparePolys
+
 1998-05-18  Olaf Bachmann  <obachman@mathematik.uni-kl.de>
 
 	* extra.cc (jjSYSTEM): changed "whoami" --> "Singular", added
